--- a/thesis.tex
+++ b/thesis.tex
@@ -4,8 +4,12 @@
 \documentclass[a4paper]{phdthesis}
 
 \usepackage[round]{natbib}            % Use Natbib style for the refs.
-\usepackage[binary-units=true]{siunitx}
-\usepackage{fixltx2e}
+%\usepackage{fixltx2e}
+%\usepackage{epstopdf}
+%\usepackage{booktabs}
+%\usepackage{rotating}
+%\usepackage{xspace}
+
 
 \hypersetup{colorlinks=true}   % Set to false for black/white printing
 \graphicspath{{.}}    % Location of your graphics files
