--- a/thesis.tex
+++ b/thesis.tex
@@ -4,6 +4,8 @@
 \documentclass[a4paper]{phdthesis}
 
 \usepackage[round]{natbib}            % Use Natbib style for the refs.
+\usepackage{hyperref}
+\usepackage{graphicx}
 %\usepackage{fixltx2e}
 %\usepackage{epstopdf}
 %\usepackage{booktabs}
@@ -22,11 +24,16 @@
 \title      {Thesis Title}
 \date       {November 2016}
 \author     {Author Names}
+\email		 {Author@soton.ac.uk}
 \supervisor {Prof. XYZ}
 \university {University of Southampton}
+\universityURL{http://www.soton.ac.uk}
 \department {Computational Engineering and Design}
+\departmentURL{www.departmentURL.ac.uk}
 \group      {Computational Engineering and Design Group}
+\groupURL{www.groupURL.ac.uk}
 \faculty    {Faculty of Engineering and the Environment}
+\facultyURL{www.facultyURL.ac.uk}
 
 \maketitle
 
