--- a/phdthesis.cls
+++ b/phdthesis.cls
@@ -330,7 +330,7 @@ I confirm that:
 \item This work was done wholly or mainly while in candidature for a research degree at this University;
 \item Where any part of this thesis has previously been submitted for a degree or any other qualification at this University or any other institution, this has been clearly stated;
 \item Where I have consulted the published work of others, this is always clearly attributed;
-\item Where I have quoted from the work of tohers, the source is always given. With the exception of such quotations, this thesis is entirely my own work;
+\item Where I have quoted from the work of others, the source is always given. With the exception of such quotations, this thesis is entirely my own work;
 \item I have acknowledged all main sources of help;
 \item Where the thesis is based on work done by myself jointly with others, I have made clear exactly what was done by others and what I have contributed myself;
 \item Either none of this work has been published before submission, or parts of this work have been published as: #1.
