made thesis title upper case on abstract page in accordance with university thesis guidelines

--- a/phdthesis.cls
+++ b/phdthesis.cls
@@ -197,7 +197,7 @@
     \bigskip
     {\normalsize \underline{Doctor of Philosophy}\par \par}
     \bigskip
-    {\normalsize\bf \@title \par \par}
+    {\normalsize\bf\MakeUppercase \@title \par \par}
     \medskip
     {\normalsize by \@author \par \par}
     \bigskip
