--- a/thesis.tex
+++ b/thesis.tex
@@ -6,7 +6,7 @@
 \usepackage[round]{natbib}            % Use Natbib style for the refs.
 %\usepackage{fixltx2e}
 %\usepackage{epstopdf}
-%\usepackage{booktabs}
+\usepackage{booktabs}
 %\usepackage{rotating}
 %\usepackage{xspace}
 
@@ -52,6 +52,26 @@ ACR & acronym}
 %% ----------------------------------------------------------------
 \chapter{A Chapter}
 The text for a chapter goes here.
+
+\begin{figure}
+  \center
+  \includegraphics[width=\linewidth]{figure.png}
+  \caption{A figure caption.\label{fig:1}}
+\end{figure}
+
+It references \fref{fig:1}.
+
+\begin{table}
+  \center
+  \caption{A table caption.\label{tab:1}}
+  \begin{tabular}{cc}
+    \toprule
+    Column 1 & Column 2\\
+    \bottomrule
+  \end{tabular}
+\end{table}
+
+It also references \tref{tab:1}.
 
 \chapter{Another Chapter}
 The text for another chapter goes here.
