added example reference list

--- a/thesis.tex
+++ b/thesis.tex
@@ -91,13 +91,15 @@ while True:
   i += 1
 \end{python}
 
+We should also cite a couple of publications \cite{Diem2017a,Diem2017b}.
+
 \appendix
 \chapter{Appendix}
 The text for an appendix goes here.
 
 %% ----------------------------------------------------------------
 \backmatter
-%\bibliographystyle{plainnat}
-%\bibliography{thesis}
+\bibliographystyle{plainnat}
+\bibliography{thesis}
 \end{document}
 %% ----------------------------------------------------------------
